--- a/index.html
+++ b/index.html
@@ -3,72 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prank Tidak Bisa Keluar</title>
+    <title>Prank Terjebak!</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
-            user-select: none; /* Cegah seleksi teks */
+            user-select: none;
         }
-        
+
         body {
-            background-color: black;
+            background: black;
             color: white;
+            font-family: Arial, sans-serif;
             text-align: center;
-            height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
+            height: 100vh;
+            overflow: hidden;
         }
 
-        #passwordBox {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
-            color: black;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+        h1 {
+            font-size: 2rem;
         }
 
-        input {
-            padding: 8px;
+        p {
             margin-top: 10px;
-            width: 80%;
+            font-size: 1.2rem;
         }
-
+        
         button {
-            margin-top: 10px;
-            padding: 10px;
-            border: none;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1rem;
             background: red;
             color: white;
+            border: none;
             cursor: pointer;
-            font-size: 18px;
-            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <h1>😂 Tidak Bisa Keluar!</h1>
-    <p>Selamat mencoba keluar dari halaman ini...</p>
-
-    <!-- Kotak Input Password -->
-    <div id="passwordBox">
-        <p>Masukkan password untuk keluar:</p>
-        <input type="password" id="exitPassword">
-        <button onclick="checkPassword()">Kirim</button>
-    </div>
+    <h1>Anda Terjebak!</h1>
+    <p>Coba keluar dari halaman ini jika bisa!</p>
+    <button onclick="mintaPassword()">Keluar</button>
 
     <script>
-        // Paksa masuk mode fullscreen
-        function forceFullscreen() {
+        // **1. Paksa pengguna tetap di halaman (blokir tombol kembali)**
+        window.onload = function () {
+            history.pushState(null, null, location.href);
+        };
+
+        window.onpopstate = function () {
+            history.pushState(null, null, location.href);
+            alert("Anda tidak bisa kembali!");
+        };
+
+        // **2. Cegah pengguna menutup tab atau keluar**
+        window.addEventListener("beforeunload", function (e) {
+            e.preventDefault();
+            e.returnValue = "";
+        });
+
+        // **3. Paksa reload jika pengguna beralih tab atau keluar**
+        document.addEventListener("visibilitychange", function () {
+            if (document.hidden) {
+                location.reload();
+            }
+        });
+
+        // **4. Paksa fullscreen (jika keluar, otomatis masuk lagi)**
+        function enableFullscreen() {
             let elem = document.documentElement;
             if (elem.requestFullscreen) {
                 elem.requestFullscreen();
@@ -81,56 +88,47 @@
             }
         }
 
-        // Cegah keluar dari fullscreen
+        enableFullscreen();
+
         document.addEventListener("fullscreenchange", () => {
             if (!document.fullscreenElement) {
-                forceFullscreen();
+                enableFullscreen();
             }
         });
 
-        // Cegah pengguna keluar dengan tombol kembali atau refresh
-        window.onload = function() {
-            history.pushState(null, null, location.href);
-        };
-
-        window.onpopstate = function() {
-            history.pushState(null, null, location.href);
-            alert("Anda tidak bisa kembali!");
-        };
-
-        // Paksa reload jika pengguna coba keluar atau sembunyikan tab
-        document.addEventListener("visibilitychange", function() {
-            if (document.hidden) {
-                location.reload();
+        // **5. Blokir tombol kembali lebih kuat**
+        document.addEventListener("keydown", function (event) {
+            if (event.key === "Escape" || event.keyCode === 27) {
+                event.preventDefault();
+            }
+            if (event.key === "Backspace" || event.keyCode === 8) {
+                event.preventDefault();
             }
         });
 
-        // Blokir semua event klik agar tidak bisa tekan "Keluar" di Chrome
-        document.addEventListener("click", function(event) {
-            event.stopPropagation();
-            event.preventDefault();
-        }, true);
-
-        // Buka password box saat tekan ESC (jika ingin keluar)
-        document.addEventListener("keydown", function(event) {
-            if (event.key === "Escape") {
-                document.getElementById("passwordBox").style.display = "block";
-            }
-        });
-
-        // Cek password untuk keluar
-        function checkPassword() {
-            let password = document.getElementById("exitPassword").value;
-            if (password === "12345") { // Ganti password di sini
-                alert("Anda berhasil keluar!");
+        // **6. Minta password sebelum keluar**
+        function mintaPassword() {
+            let password = prompt("Masukkan password untuk keluar:");
+            if (password === "1234") {
+                alert("Anda bebas!");
                 window.close(); // Coba tutup tab
             } else {
-                alert("Password salah!");
+                alert("Salah! Anda tetap terjebak!");
             }
         }
 
-        // Jalankan fullscreen otomatis saat halaman dimuat
-        forceFullscreen();
+        // **7. Blokir swipe dari atas (Quick Settings di HP)**
+        document.addEventListener("touchstart", function (event) {
+            if (event.touches.length > 1) {
+                event.preventDefault();
+            }
+        }, { passive: false });
+
+        document.addEventListener("gesturestart", function (event) {
+            event.preventDefault();
+        });
+
     </script>
 </body>
 </html>
+
